a1/brendan_gordon/TEST_PROGRAMS/invalidtype/shao_kun_deng/invalid4.min
var x : int;

if x then
	x = 1.0;
endif
